trash&garbage/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/question-processing-system/k8s/policies/15-kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kyverno-policy
  annotations:
    policies.kyverno.io/title: Require Resource Limits
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/description: >-
      Require all containers to have resource limits defined
spec:
  validationFailureAction: Audit
  rules:
  - name: require-resource-limits
    match:
      resources:
        kinds:
        - Pod
        namespaces:
        - question-system
    validate:
      message: "CPU and memory limits are required."
      pattern:
        spec:
          containers:
          - resources:
              limits:
                memory: "?*"
                cpu: "?*"
